--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://pratiksbhoite1.github.io/my-portfolio",
+  "homepage": "https://pratiksbhoite1.github.io/my_portfolio",
   "dependencies": {
     "@react-pdf/renderer": "^3.0.0",
     "@testing-library/jest-dom": "^5.16.5",
